# OS_lab3

./: CMakeLists.txt
Lib/: CMakeLists.txt  Threads.cpp  Threads.h  utils.h
OS_lab3/: CMakeLists.txt  OS_lab3.cpp  OS_lab3.h
Tests/: CMakeLists.txt  tests.cpp
